--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
     <main class="container">
         <h1 class="center">Calculate your net worth here</h1>
         <div class="grid">
-            <input type="number" id="black-market" placeholder="black market">
-            <input type="number" id="black-market-painted" placeholder="painted black market">
-            <input type="number" id="exotic" placeholder="exotic">
-            <input type="number" id="exotic-painted" placeholder="painted exotic">
+            <input type="number" inputmode="numeric" id="black-market" placeholder="black market">
+            <input type="number" inputmode="numeric" id="black-market-painted" placeholder="painted black market">
+            <input type="number" inputmode="numeric" id="exotic" placeholder="exotic">
+            <input type="number" inputmode="numeric" id="exotic-painted" placeholder="painted exotic">
         </div>
         <div class="grid">
-            <input type="number" id="import" placeholder="import">
-            <input type="number" id="import-painted" placeholder="painted import">
-            <input type="number" id="very-rare" placeholder="very rare">
-            <input type="number" id="very-rare-painted" placeholder="painted very rare">
+            <input type="number" inputmode="numeric" id="import" placeholder="import">
+            <input type="number" inputmode="numeric" id="import-painted" placeholder="painted import">
+            <input type="number" inputmode="numeric" id="very-rare" placeholder="very rare">
+            <input type="number" inputmode="numeric" id="very-rare-painted" placeholder="painted very rare">
         </div>
         <div class="grid">
-            <input type="number" id="rare" placeholder="rare">
-            <input type="number" id="rare-painted" placeholder="painted rare">
-            <input type="number" id="uncommon" placeholder="uncommon">
-            <input type="number" id="uncommon-painted" placeholder="painted uncommon">
+            <input type="number" inputmode="numeric" id="rare" placeholder="rare">
+            <input type="number" inputmode="numeric" id="rare-painted" placeholder="painted rare">
+            <input type="number" inputmode="numeric" id="uncommon" placeholder="uncommon">
+            <input type="number" inputmode="numeric" id="uncommon-painted" placeholder="painted uncommon">
         </div>
         <button onclick="calculate()">calculate</button>
     </main>
